--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -105,6 +105,8 @@
 // основной инпут
 .input-block {
   padding-top: 3rem;
+  display: flex;
+  flex-direction: row;
 }
 
 .input {
@@ -153,10 +155,9 @@
   &::after {
     margin-left: 35px;
     margin-bottom: 5px;
-    box-sizing: border-box;
     display: inline-block;
     content: '';
-    width: 50%;
+    width: 647px;
     height: 1px;
     background-color: var(--textcolor);
   }
@@ -211,5 +212,52 @@
 
   &-img {
     margin-left: 8px;
+  }
+}
+
+.synonym {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+
+  &-ul {
+    list-style: none;
+    max-width: 740px;
+  }
+
+  &-title {
+    opacity: 0.5;
+  }
+
+  &-li {
+    display: inline-block;
+    margin-left: 1rem;
+    color: rgb(207, 30, 198);
+  }
+}
+
+.search-block {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0.5rem;
+  margin-left: 43rem;
+
+  &-button {
+    border: 0;
+    opacity: 0;
+    cursor: pointer;
+    padding: 1.25rem;
+  }
+
+  &-svg {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 18px;
+    width: 18px;
+    cursor: pointer;
   }
 }
