--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -229,6 +229,8 @@
   &-ul {
     list-style: none;
     max-width: 740px;
+    margin: 0;
+    padding: 0;
   }
 
   &-title {
@@ -266,6 +268,12 @@
     width: 18px;
     cursor: pointer;
   }
+}
+
+.skeleton-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 800px) {
